Critique 9 – Security Assumptions and Upgrade Risks
Critique 9 – Security Assumptions and Upgrade Risks

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -73,6 +73,16 @@ No additional changes beyond these EIPs are included in the Olympia upgrade. Cli
 
 ### Rationale
 
+### Simplicity by Design
+
+The Olympia Upgrade introduces **no new consensus complexity** beyond EIP-1559 and EIP-3198, both of which are standardized and widely deployed.
+
+Olympia’s broader architecture is **modular**:  
+- Treasury (ECIP-1112), DAO (ECIP-1113), and Funding Process (ECIP-1114) are **layered components** built on standard smart contracts.
+- Each ECIP can be tested, activated, and upgraded independently — allowing ETC to scale participation **incrementally**, not all at once.
+
+This approach ensures the upgrade is not over-engineered, but instead gives ETC the infrastructure to grow **when it’s ready**, without introducing immediate operational burden.
+
 __Interoperability__: Maintaining interoperability with Ethereum and other EVM-compatible chains is essential to ensuring developer portability, tooling support, and infrastructure reuse. By aligning with key protocol features like EIP-1559 and EIP-3198, Ethereum Classic reduces fragmentation and remains a viable deployment target for modern EVM applications and clients (e.g., ETC ↔ ETH parity). 
 
 __Immutability__: The proposed upgrades introduce new transaction types and opcodes but do not alter the semantics of existing contracts or state. Historical contracts will behave identically, and no prior behavior is retroactively affected. These are strictly additive changes to EVM functionality and maintain the network’s commitment to immutability.
