--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -80,6 +80,17 @@ These constraints ensure the treasury acts as a secure, passive vault controlled
 
 ### Rationale
 
+#### Right-Sized for Network Maturity
+
+The Olympia Treasury is deployed as a **simple, immutable vault**, with no internal governance or complex logic. Until the DAO activates, it accumulates funds securely with **no risk of misuse**.
+
+This ensures:
+- **No operational risk** while governance matures  
+- **No funding loss or overhead** from inactive systems  
+- **A secure foundation** for future coordination, without forcing premature adoption
+
+Treasury logic is intentionally minimal. Complexity, if needed, is pushed to the DAO layer — which can evolve at the community’s pace.
+
 The Olympia Treasury contract serves as the cornerstone of Ethereum Classic’s transition to a sustainable, self-funded ecosystem. Its design reflects several key priorities:
 
 - **Security Budget**: As block rewards decline under ECIP-1017, Ethereum Classic requires a durable, non-inflationary funding source. Redirecting `BASEFEE` ensures the network retains a native mechanism to support client maintenance, audits, infrastructure, and protocol upgrades.
