--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -94,6 +94,15 @@ The DAO MUST include the following core components:
 
 ### Rationale
 
+#### Modular, Future-Ready Governance
+
+Olympia DAO’s architecture reflects best practices in DAO design:
+- **Separation of concerns**: Treasury logic, governance voting, and proposal execution are isolated.
+- **Progressive Activation**: The DAO stack can start with conservative voting rules and no recurring budgets.
+- **Upgradeable Contracts**: The governance system supports future extensions like quadratic voting, council roles, or grant committees — **only when ETC’s ecosystem needs them**.
+
+This avoids over-engineering today while allowing maturity tomorrow.
+
 Ethereum Classic has long lacked a credible, open, and transparent governance process for allocating protocol-level funds. Historically, development efforts were funded off-chain by private actors, centralized foundations, or non-transparent grant programs — often leading to mistrust, misalignment, and fragmentation.
 
 The Olympia DAO introduces a permissionless, on-chain governance system that reflects Ethereum Classic’s values of decentralization, immutability, and sovereignty. By integrating directly with the Olympia Treasury, the DAO enables protocol revenue to be allocated toward public goods through a community-driven process.
