--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -176,6 +176,16 @@ By anchoring off-chain execution to both **code and corporate law**, Ethereum Cl
 
 ### Rationale
 
+#### Built for Present and Future Use
+
+The ECFP framework is a **minimal set of rules** to ensure transparency and accountability:
+
+- Proposals can be as simple as a one-time payout or as advanced as milestone-based vesting.
+- The system imposes no minimum activity levels — it functions even if only one ECFP is approved per year.
+- As ETC’s community grows, the same framework scales effortlessly.
+
+This avoids complexity while ensuring ETC is never again dependent on private foundations or informal grants.
+
 The Ethereum Classic Funding Proposal (ECFP) process formalizes a community-governed method for allocating protocol-level funds from the Olympia Treasury. This structure ensures funding decisions are transparent, inclusive, and aligned with the Ethereum Classic network’s long-term values.
 
 
